# Vision-based-underwater-pillar-detection

./: CMakeLists.txt  Camera_Handler.cpp  Camera_Handler.h  Data_Collector.cpp  Data_Collector.h  Data_Structures.h  Data_Structures_old.h  Data_Visualization.cpp  Data_Visualization.h  Feature_Analyzer.cpp  Feature_Analyzer.h  Feature_Finder.cpp  Feature_Finder.h  Feature_Finder_old.cpp  Feature_Finder_old.h  Feature_detector_analysis.ipynb  Feature_legacy  Graveyard.cpp  Image_Handler.cpp  Image_Handler.h  Legacy_test_code  Master_Thesis_Data_Visualization.ipynb  Obstacle_Detection.cpp  Obstacle_Detection.h  Preprocessing.cpp  Preprocessing.h  README.md  Setup_Guide  Test_Methods.cpp  Test_Methods.h  Trackbars.cpp  Trackbars.h  benchmarking.cpp  benchmarking_test.cpp  benchmarking_test.h  calculator.cpp  calculator.h  calibrations-stereo-lustrous-cursola.yml  camera.cpp  camera.h  (+26 more)
.ipynb_checkpoints/: Master_Thesis_Data_Visualization-checkpoint.ipynb
python_workspace/: Preprocessing.py  Preprocessing_new.py  Test_stuff.py  aniso.py  filters.py  graveyard.py  haze_removal.py  points_3d_triangulation.csv
